FIX FlyingFox margin left when TST tabs overflow
Workaround hiding scrollbar in TST

--- a/firefox/treestyletab/custom.css
+++ b/firefox/treestyletab/custom.css
@@ -375,3 +375,7 @@ tab-item.active.contextual-identity-firefox-default {
 #all-tabs {
     border: none !important;
 }
+
+#tabbar { 
+    scrollbar-width: none !important; 
+}
